@@ -116,6 +116,7 @@
     <ClInclude Include="..\include\Stream.h" />
     <ClInclude Include="..\include\String.h" />
     <ClInclude Include="..\include\structs.h" />
+    <ClInclude Include="..\include\Vector.h" />
     <ClInclude Include="..\include\VertexDeclaration.h" />
     <ClInclude Include="..\include\VertexElement.h" />
     <ClInclude Include="..\KGEmain\Android.h" />
